hphp/test/slow/clsmeth/inst-meth-static.php.expectf
Fatal error: Uncaught exception 'BadMethodCallException' with message 'Non-static method D::foo() cannot be called statically' in %s/inst-meth-static.php:6
Stack trace:
#0 %s/inst-meth-static.php(15): C->bar()
#1 (): main()
#2 {main}
